[package]
name = "ColorHoster"
version = "0.7.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-hid = "0.4.2"
ceviche = "0.7.0"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
ctrlc = "3.4.5"
evalexpr = "13.1.0"
fern = { version = "0.7.1", features = ["colored"] }
futures = "0.3.31"
indexmap = "2.9.0"
itertools = "0.14.0"
log = "0.4.26"
num_enum = "0.7.3"
palette = "0.7.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
toml = "0.9.8"
